server/filebrowser-externaldrive/filebrowser-ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser
        volumeMounts:
        - name: files
          mountPath: /srv
        ports:
        - containerPort: 80
      volumes:
      - name: files
        persistentVolumeClaim:
          claimName: external-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: filebrowser
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowserr-ingress
  namespace: filebrowser
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: filebrowser.DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prom-stack-grafana
            port:
              number: 80
  tls:
  - hosts:
    - filebrowser.DOMAIN
